plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.6'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}
allprojects {
    group = 'com.hanshan'
    version = '0.0.1-SNAPSHOT'
    java {
        sourceCompatibility = '1.8'
    }

    repositories {
        //本地
        //mavenLocal()
        //阿里仓库
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url 'https://build.shibboleth.net/nexus/content/repositories/releases/' }
        mavenCentral()
    }
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'io.spring.dependency-management'

    //    configurations {
//        compileOnly {
//            extendsFrom annotationProcessor
//        }
//    }

    //所有子模块的-依赖版本管理
    //io.spring.dependency-management 插件提示依赖支持
    dependencyManagement {
        dependencies {
            dependency 'org.projectlombok:lombok:1.18.32'
            //dependency "cn.hutool:hutool-all:5.0.7"
            //dependency "org.apache.commons:commons-lang3:3.5"
        }
    }
//子项目用的依赖
    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }
    tasks.named('test') {
        useJUnitPlatform()
    }
}
// 配置gradle的版本
wrapper {
    //gradle的版本
    gradleVersion = '8.7'
    //版本类型：BIN、ALL（完全版，可以看gradle的代码）
    distributionType = 'ALL'
}

